# graffiti-rs

./: Cargo.toml  README.md  default.nix  exit.json  exit.jsonrpc  flake.nix  init.json  init.jsonrpc  inited.json  inited.jsonrpc  move.json  move.jsonrpc  shut.json  shut.jsonrpc
src/: cli.rs  client-server-protocol.md  id.rs  local-protocol.md  log.rs  main.rs  path_utils.rs  peer-to-peer-protocol.md  state.rs  utility_types.rs
src/csp/: mod.rs
src/net/: connection.rs  mod.rs  receive.rs  send.rs
src/ppp/: mod.rs  receive.rs  send.rs
src/rpc/: mod.rs
