[package]
name = "graffiti-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.21", features = ["derive"] }
dirs = "6.0.0"
rustls = { version = "0.23.23", features = [
  "log",
  "logging",
  "ring",
  "std",
  "tls12",
], default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.43.0", features = [
  "fs",
  "io-std",
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
tokio-tungstenite = { version = "0.26.2", features = [
  "rustls",
  "rustls-tls-native-roots",
] }
futures-util = "0.3.31"
rcgen = "0.13.2"
tokio-rustls = { version = "0.26.1", default-features = false, features = [
  "logging",
  "tls12",
  "ring",
] }
rustls-native-certs = "0.8.1"
sha2 = "0.10.8"
hex = "0.4.3"
walkdir = "2.5.0"
ignore = "0.4.23"
uuid = { version = "1.16.0", features = ["v4"] }
twox-hash = "2.1.0"
reqwest = { version = "0.12.22", features = ["json"] }

[dev-dependencies]
fluid = "0.4"
