[package]
name = "graffiti-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.21", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.31"
hex = "0.4.3"
ignore = "0.4.23"
rand = "0.10.1"
rcgen = "0.13.2"
reqwest = { version = "0.12.22", default-features = false, features = [
  "json",
  "rustls-tls-native-roots"
] }
russh = "0.60.2"
russh-config = "0.58.0"
rustls = { version = "0.23.23", default-features = false, features = [
  "log",
  "logging",
  "ring",
  "std",
  "tls12",
] }
rustls-native-certs = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = [
  "fs",
  "io-std",
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
tokio-rustls = { version = "0.26.1", default-features = false, features = [
  "logging",
  "ring",
  "tls12",
] }
tokio-tungstenite = { version = "0.26.2", features = [
  "rustls",
  "rustls-tls-native-roots",
] }
tokio-util = { version = "0.7.18", features = ["codec"] }
twox-hash = "2.1.0"
uuid = { version = "1.16.0", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
fluid = "0.4"
